*SVN*

* Added Base#attributes that returns a hash of all the attributes with their names as keys and clones of their objects as values #433 [atyp.de]

* Fixed that foreign keys named the same as the association would cause stack overflow #437 [Eric Anderson]

* Fixed default scope of acts_as_list from "1" to "1 = 1", so it'll work in PostgreSQL (among other places) #427 [Alexey]

* Added Base#reload that reloads the attributes of an object from the database #422 [Andreas Schwarz]

* Added SQLite3 compatibility through the sqlite3-ruby adapter by Jamis Buck #381 [bitsweat]

* Added support for the new protocol spoken by MySQL 4.1.1+ servers for the Ruby/MySQL adapter that ships with Rails #440 [Matt Mower] 

* Added that Observers can use the observes class method instead of overwriting self.observed_class().

    Before:
      class ListSweeper < ActiveRecord::Base
        def self.observed_class() [ List, Item ]
      end
    
    After:
      class ListSweeper < ActiveRecord::Base
        observes List, Item
      end

* Fixed that conditions in has_many and has_and_belongs_to_many should be interpolated just like the finder_sql is

* Fixed Base#update_attribute to be indifferent to whether a string or symbol is used to describe the name

* Added Base#toggle(attribute) and Base#toggle!(attribute) that makes it easier to flip a switch or flag.

    Before: topic.update_attribute(:approved, !approved?)
    After : topic.toggle!(:approved)

* Added Base#increment!(attribute) and Base#decrement!(attribute) that also saves the records. Example:

    page.views # => 1
    page.increment!(:views) # executes an UPDATE statement
    page.views # => 2
    
    page.increment(:views).increment!(:views)
    page.views # => 4

* Added Base#increment(attribute) and Base#decrement(attribute) that encapsulates the += 1 and -= 1 patterns.


*1.4.0* (January 4th, 2005)

* Added automated optimistic locking if the field <tt>lock_version</tt> is present.  Each update to the