@@ -1,5 +1,10 @@
 *SVN*
 
+* Added a differenciation between AssociationCollection#size and -length. Now AssociationCollection#size returns the size of the 
+  collection by executing a SELECT COUNT(*) query if the collection hasn't been loaded and calling collection.size if it has. If 
+  it's more likely than not that the collection does have a size larger than zero and you need to fetch that collection afterwards, 
+  it'll take one less SELECT query if you use length.
+
 * Added Base#attributes that returns a hash of all the attributes with their names as keys and clones of their objects as values #433 [atyp.de]
 
 * Fixed that foreign keys named the same as the association would cause stack overflow #437 [Eric Anderson]
